[iOS] Fix TabGrid toolbar button constraints

This CL removes the autolayout constraints on the TabGrid button in the
toolbar and instead positions it using frames.

Bug: 862576
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I5eda2cc58ee38228e40870f723315bc91ac6953f
Reviewed-on: https://chromium-review.googlesource.com/1133167
Reviewed-by: Olivier Robin <olivierrobin@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#574153}
Former-commit-id: aab96631074ae44940c77dd9aee111473cfb38b7